objects/Contact__x.object
<CustomObject>
    <fields>
        <fullName>pi_utm_medium_c__c</fullName>
        <externalDeveloperName>pi__utm_medium__c</externalDeveloperName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_source_c__c</fullName>
        <externalDeveloperName>pi__utm_source__c</externalDeveloperName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_term_c__c</fullName>
        <externalDeveloperName>pi__utm_term__c</externalDeveloperName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_ExecutiveID_c__c</fullName>
        <externalDeveloperName>texcellency__DefHC_ExecutiveID__c</externalDeveloperName>
        <label>DHC Executive ID</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_HospitalID_c__c</fullName>
        <externalDeveloperName>texcellency__DefHC_HospitalID__c</externalDeveloperName>
        <label>Definitive ID</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_Is_Active_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>texcellency__DefHC_Is_Active__c</externalDeveloperName>
        <label>DHC Is Active</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_LinkedInProfile_c__c</fullName>
        <externalDeveloperName>texcellency__DefHC_LinkedInProfile__c</externalDeveloperName>
        <label>DHC LinkedIn Profile</label>
        <length>2200</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_Record_Changed_Date_c__c</fullName>
        <externalDeveloperName>texcellency__DefHC_Record_Changed_Date__c</externalDeveloperName>
        <label>DHC Record Changed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <label>Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Contacts</pluralLabel>
</CustomObject>